--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,34 +9,48 @@
     <script type="text/javascript" src="triviagame.js"></script>
     <link rel="stylesheet" href="stylesheet.css">
     <link rel="reset" href="reset.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT&display=swap" rel="stylesheet">
 
     <title>Park&Rec Trivia Game</title>
 
 </head>
+
 <body>
 
-<h1>Park and Recreantional Trivia Quiz</h1>
+    <h1>Park and Recreantional Trivia Quiz</h1>
 
-<div class="container">
+    <div class="container">
 
-<button id="Play">Let's Play!</button>
+        <button id="play">Let's Play!</button>
 
-<div id="time-left"></div>
+        <div id="time-left"></div>
 
-<div id="questions"></div>
+        <div id="questions">
+        </div>
 
-<div id="answers"></div>
+    </div>
 
-<button id="Done">Finished</button>
+    <div class="container2">
 
-<div id="Correct"></div>
-<div id="Wrong"></div>
+        <div id="answers"></div>
+
+        <button id="submit">Finished</button>
+
+        <div id="Correct"></div>
+
+        <div id="Wrong"></div>
+
+    </div>
 
 
-</div>
-     
+    </div>
+
 </body>
+
 </html>
