--- a/index.html
+++ b/index.html
@@ -42,15 +42,11 @@
 
         <button id="submit">Finished</button>
 
-        <div id="Correct"></div>
+        <div>Correct Answers: <span id="Correct"></span></div>
 
-        <div id="Wrong"></div>
-
-    </div>
-
+        <div>Wrong Answers: <span id="Wrong"></span></div>
 
     </div>
-
 </body>
 
 </html>
