--- a/index.html
+++ b/index.html
@@ -42,10 +42,11 @@
 
         <button id="submit">Finished</button>
 
-        <div>Correct Answers: <span id="Correct"></span></div>
+        <div>Correct Answers: <span id="Correct">0</span></div>
 
-        <div>Wrong Answers: <span id="Wrong"></span></div>
+        <div>Wrong Answers: <span id="Wrong">0</span></div>
 
+        <button id="reset">Reset</button>
     </div>
 </body>
 
